
==========================================================================

Version 1.8.4 patchlevel 1                                 ??? ??,  2010

Major Changes:
 * You can now do the equivilent of @command/add, @hook, @function and
   @attribute/access from alias.cnf and restrict.cnf, to add/configure
   commands, functions and standard attributes. Suggested by Paige. [MG]

Minor Changes:
 * @power now reports when you try and set a power which is already set (or
   clear one which isn't set), similar to @set. Suggested by Paige. [MG]
 * Sorting methods now take - as a prefix to sort type in order to sort
   in descending order. Suggested by Minion. [GM]
 * The matching code no longer matches players who aren't nearby with
   "*playername" when MAT_NEAR is given, more in line with other checks.
   (This has virtually no impact for most players.) [MG]
 * The internal pe_info (which manages the function invocation limit, among
   other things) is now managed per-queue, not per-command argument. [MG]
 * @chan/decompile now uses "*name" for players, and dbrefs for other
   objects, when printing "@chan/on" statements. [MG]
 * cpu_limit now works on Cygwin (though not quite as well as on unix).
   A slightly higher limit may be needed than other platforms. [MG]
 * The output from say, pose, semipose and @emit is now passed through the
   SPEECHMOD attribute before being outputted. Suggested by Paige, based on
   MUX and TinyMUSH. [MG]
 * @config/list now accepts wildcard patterns to match against option names.
   Suggested by Trinsec. [MG]
 * The dreaded <Output flushed> message should show up a lot less frequently
   on spammy debug output and the like. By popular demand. [SW]
 * Added support for MSSP (Mud Server Status Protocol), based on patches by
   Javelin and Teal. See mush.cnf for details. [MG]

Commands:
 * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
 * Rooms/exits must now have an @COST attribute in order to be given